[GStreamer] HRTFDatabaseLoader conflicts with AudioFileReader https://bugs.webkit.org/show_bug.cgi?id=78095

Reviewed by Martin Robinson.

Moved the GStreamer initialization logic to a new
GStreamerUtilities module, used by the MediaPlayer and the
AudioContext. I also removed the static variables as
gst_init_check already handles cases where it's called multiple
times.

* GNUmakefile.list.am:
* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::constructCommon):
* platform/audio/gstreamer/AudioDestinationGStreamer.cpp:
(WebCore::AudioDestinationGStreamer::AudioDestinationGStreamer):
* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(WebCore::AudioFileReader::createBus):
* platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
(WTF::adoptGRef):
(WTF):
(WTF::GstElementFactory):
* platform/graphics/gstreamer/GRefPtrGStreamer.h:
(WTF):
* platform/graphics/gstreamer/GStreamerUtilities.cpp: Added.
(WebCore):
(WebCore::initializeGStreamer):
* platform/graphics/gstreamer/GStreamerUtilities.h: Added.
(WebCore):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::doGstInit):

Canonical link: https://commits.webkit.org/101544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114269 268f45cc-cd09-0410-ab3c-d52691b4dbfc